:bug: update token, controls z-index

--- a/pages/App.css
+++ b/pages/App.css
@@ -88,6 +88,7 @@ body {
   background-position: center center;
   filter: blur(8em) opacity(0.6);
   position: absolute;
+  z-index: 0;
 }
 
 .main-wrapper {
