--- a/pages/Player.css
+++ b/pages/Player.css
@@ -31,6 +31,7 @@
 .now-playing__side {
   width: 100%;
   padding: 2rem;
+  z-index: 1;
 }
 
 /** Progress **/
